--- a/index.html
+++ b/index.html
@@ -3,9 +3,196 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>B-9-Assignment-5</title>
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- tailwind cdn -->
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    testing...
+  <body class="max-w-[1440px] mx-auto bg-[03071299]">
+    <header class="lg:w-4/5 w-11/12 mx-auto">
+      <nav class="flex justify-between items-center py-4 font-[Raleway]">
+        <div class="text-3xl font-extrabold">E-Ticket</div>
+
+        <ul
+          class="lg:flex gap-8 text-lg cursor-pointer text-[#030712B3] lg:visible hidden"
+        >
+          <li>Home</li>
+          <li>About</li>
+          <li>Destination</li>
+          <li>Search</li>
+        </ul>
+        <div class="flex gap-3">
+          <button
+            class="px-4 py-3 rounded-lg border-2 border-[#1DD10066] bg-[#1DD1001A] flex items-center gap-3 font-bold text-lg text-[#1DD100]"
+          >
+            Bus<img src="./images/bus-icon.png" alt="bus-icon" />
+          </button>
+          <img
+            class="lg:hidden bg-[#1DD1001A] border-2 border-[#1DD10066] rounded-lg p-2 w-12 cursor-pointer"
+            src="./images/menu.png"
+            alt=""
+          />
+          <ul
+            class="absolute top-[90px] right-7 text-center lg:flex flex-col gap-2 justify-center items-center bg-slate-200 p-5 rounded-md lg:invisible"
+          >
+            <li class="hover:bg-slate-400 rounded-md w-40">Home</li>
+            <li class="hover:bg-slate-400 rounded-md">About</li>
+            <li class="hover:bg-slate-400 rounded-md">Destination</li>
+            <li class="hover:bg-slate-400 rounded-md">Search</li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="bg-[#F7F8F8]">
+      <h1 class="text-center text-3xl font-bold">P.H Paribahan</h1>
+      <p class="max-w-[600px] text-center mx-auto mb-3">
+        Yes, you can run unit tests and view the results directly within the
+        app. The integrated testing features allow for a streamlined .
+      </p>
+      <section
+        class="pt-9 h-72 lg:w-4/5 mx-auto w-11/12 flex gap-3 rounded-xl items-center justify-center bg-white"
+      >
+        <div>
+          <div class="flex justify-between mb-4">
+            <div class="flex items-center justify-center gap-4">
+              <img class="w-14" src="./images/bus-logo.png" alt="" />
+              <div>
+                <h2 class="text-lg font-bold">Greenline Paribahan</h2>
+                <p>Coach-009-WEB ! AC_Business</p>
+              </div>
+            </div>
+            <div
+              class="flex items-center bg-[#1DD10026] px-2 rounded-md text-[#1DD100]"
+            >
+              <img class="mr-2" src="./images/seat-green.png" alt="" /><span
+                class="mr-1 font-bold"
+                >40
+              </span>
+              Seats left
+            </div>
+          </div>
+          <div class="bg-[#F7F8F8] p-5 rounded-xl">
+            <div class="border-b-2 border-dashed flex justify-between py-4">
+              <p>Route</p>
+              <h2>Dhaka-Sylhet</h2>
+            </div>
+            <div class="border-b-2 border-dashed flex justify-between py-2">
+              <p>Departure Time</p>
+              <h2>9:00 PM</h2>
+            </div>
+            <div class="flex justify-between gap-5 py-2">
+              <p class="bg-[#0307120D] p-3 rounded-lg">
+                Boarding Point - Laxmipur
+              </p>
+              <p class="bg-[#0307120D] p-3 rounded-lg">
+                Dropping Point - Bogura
+              </p>
+              <p class="bg-[#0307120D] p-3 rounded-lg">Est. Time - 11 Hour</p>
+            </div>
+          </div>
+        </div>
+        <img class="h-full" src="./images/info-devider.png" alt="" />
+        <div class="flex flex-col items-center justify-center">
+          <img src="./images/fare.png" alt="" />
+          <h1>550 Taka</h1>
+          <p>Per seat</p>
+        </div>
+      </section>
+      <section class="w-11/12 lg:w-4/5 mx-auto flex gap-5 mt-6">
+        <div class="w-3/4">
+          <h1>Select Your Seat</h1>
+          <div
+            class="flex justify-between items-center border-y-2 border-dashed py-4 mt-3"
+          >
+            <p class="flex">
+              <img src="./images/seat-gray.png" alt="" /> Available
+            </p>
+            <p class="flex">
+              <img src="./images/seat-green-filled.png" alt="" />
+              Selected
+            </p>
+          </div>
+          <div
+            class="seat-section mt-4 grid grid-cols-6 justify-items-center gap-5"
+          >
+            <button
+              class="px-9 py-2 flex justify-center rounded-lg col-start-6 col-end-7 bg-[#0307121A]"
+            >
+              <img src="./images/wheel.png" alt="" srcset="" />
+            </button>
+            <!-- <p class="px-9 py-2">A</p>
+            <button
+              class="duration-200 ease-in-out hover:bg-slate-600 hover:text-white px-9 py-2 text-lg flex justify-center rounded-lg bg-[#0307121A]"
+            >
+              A1
+            </button>
+            <button
+              class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
+            >
+              A2
+            </button>
+            <p></p>
+            <button
+              class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
+            >
+              A3
+            </button>
+            <button
+              class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
+            >
+              A4
+            </button> -->
+          </div>
+        </div>
+        <div class="w-1/4">
+          <h1>Select your sheet</h1>
+          <div>
+            <div class="font-bold flex justify-between items-center mt-4">
+              <p>
+                Seat
+                <sup class="bg-[#1DD100] p-[2px] rounded-lg text-white">2</sup>
+              </p>
+              <p>class</p>
+              <p>price</p>
+            </div>
+            <div class="flex justify-between">
+              <p>seat no</p>
+              <p>Economoy</p>
+              <p>550</p>
+            </div>
+          </div>
+          <br />
+          <hr />
+          <div class="flex justify-between mt-3">
+            <p>Total Price</p>
+            <p>BDT <span>1000</span></p>
+          </div>
+          <div class="h-9 flex justify-between bg-white rounded-xl mt-3">
+            <input
+              type="text"
+              class="border-none outline-none rounded-xl ml-3"
+            />
+            <button class="bg-[#1DD100] px-4 rounded-xl text-white">
+              Apply</button
+            ><br />
+          </div>
+          <!-- <div class="flex justify-between">
+              <p>Discount</p>
+              <p>-500</p>
+            </div> -->
+          <div class="flex justify-between mt-4">
+            <p>Grand Total</p>
+            <p>BDT <span>11000</span></p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="script.js"></script>
   </body>
 </html>
