--- a/index.html
+++ b/index.html
@@ -48,156 +48,294 @@
           </ul>
         </div>
       </nav>
-    </header>
-    <main class="bg-[#F7F8F8]">
-      <h1 class="text-center text-3xl font-bold">P.H Paribahan</h1>
-      <p class="max-w-[600px] text-center mx-auto mb-3">
-        Yes, you can run unit tests and view the results directly within the
-        app. The integrated testing features allow for a streamlined .
-      </p>
       <section
-        class="pt-9 h-72 lg:w-4/5 mx-auto w-11/12 flex gap-3 rounded-xl items-center justify-center bg-white"
+        class="bg-cover bg-center rounded-3xl py-24 text-white bg-[url('./images/banner.png')]"
       >
-        <div>
-          <div class="flex justify-between mb-4">
-            <div class="flex items-center justify-center gap-4">
-              <img class="w-14" src="./images/bus-logo.png" alt="" />
-              <div>
-                <h2 class="text-lg font-bold">Greenline Paribahan</h2>
-                <p>Coach-009-WEB ! AC_Business</p>
-              </div>
-            </div>
-            <div
-              class="flex items-center bg-[#1DD10026] px-2 rounded-md text-[#1DD100]"
-            >
-              <img class="mr-2" src="./images/seat-green.png" alt="" />
-              <span class="total-seat-avalable mr-1 font-bold">40 </span>
-              Seats left
-            </div>
-          </div>
-          <div class="bg-[#F7F8F8] p-5 rounded-xl">
-            <div class="border-b-2 border-dashed flex justify-between py-4">
-              <p>Route</p>
-              <h2>Dhaka-Sylhet</h2>
-            </div>
-            <div class="border-b-2 border-dashed flex justify-between py-2">
-              <p>Departure Time</p>
-              <h2>9:00 PM</h2>
-            </div>
-            <div class="flex justify-between gap-5 py-2">
-              <p class="bg-[#0307120D] p-3 rounded-lg">
-                Boarding Point - Laxmipur
-              </p>
-              <p class="bg-[#0307120D] p-3 rounded-lg">
-                Dropping Point - Bogura
-              </p>
-              <p class="bg-[#0307120D] p-3 rounded-lg">Est. Time - 11 Hour</p>
-            </div>
+        <h1 class="lg:text-6xl text-3xl font-bold text-center">
+          End-to-End Travel with <br /><span class="text-[#1DD100]">
+            EN-Paribahan</span
+          >
+        </h1>
+        <p class="max-w-[650px] text-center mx-auto mt-4">
+          Yes, you can run unit tests and view the results directly within the
+          app. The integrated testing features allow for a streamlined .
+        </p>
+        <a
+          href=""
+          class="block w-fit mx-auto px-5 py-3 rounded-lg mt-6 bg-[#1DD100] text-black font-bold"
+        >
+          <button>Buy Tickets</button>
+        </a>
+      </section>
+      <section
+        class="flex flex-col lg:flex-row gap-5 lg:gap-2 items-center justify-evenly relative bottom-12"
+      >
+        <div
+          class="w-[250px] h-[96px] rounded-2xl shadow-lg border-b-8 border-[#1DD100] justify-center bg-white flex items-center gap-3"
+        >
+          <img class="w-9" src="./images/people.png" alt="" />
+          <div>
+            <h1 class="text-xl font-bold">500K+</h1>
+            <p class="text-sm text-[#03071299]">Register users</p>
           </div>
         </div>
-        <img class="h-full" src="./images/info-devider.png" alt="" />
-        <div class="flex flex-col items-center justify-center">
-          <img src="./images/fare.png" alt="" />
-          <h1>550 Taka</h1>
-          <p>Per seat</p>
+        <div
+          class="w-[250px] h-[96px] rounded-2xl shadow-lg border-b-8 border-[#1DD100] justify-center bg-white flex items-center gap-3"
+        >
+          <img class="w-9" src="./images/people.png" alt="" />
+          <div>
+            <h1 class="text-xl font-bold">500K+</h1>
+            <p class="text-sm text-[#03071299]">Register users</p>
+          </div>
+        </div>
+        <div
+          class="w-[250px] h-[96px] rounded-2xl shadow-lg border-b-8 border-[#1DD100] justify-center bg-white flex items-center gap-3"
+        >
+          <img class="w-9" src="./images/people.png" alt="" />
+          <div>
+            <h1 class="text-xl font-bold">500K+</h1>
+            <p class="text-sm text-[#03071299]">Register users</p>
+          </div>
         </div>
       </section>
-      <section class="w-11/12 lg:w-4/5 mx-auto flex gap-5 mt-6">
-        <div class="w-3/4">
-          <h1>Select Your Seat</h1>
-          <div
-            class="flex justify-between items-center border-y-2 border-dashed py-4 mt-3"
-          >
-            <p class="flex">
-              <img src="./images/seat-gray.png" alt="" /> Available
-            </p>
-            <p class="flex">
-              <img src="./images/seat-green-filled.png" alt="" />
-              Selected
-            </p>
+    </header>
+    <main class="lg:w-4/5 w-11/12 mx-auto">
+      <section
+        class="flex lg:flex-row flex-col gap-5 justify-evenly items-center"
+      >
+        <div class="flex h-44 bg-[#FFBF0F] rounded-xl">
+          <div class="flex flex-col items-start justify-center pl-7">
+            <h1 class="text-3xl font-bold">15% OFF</h1>
+            <p class="text-lg font-bold">on your next purchase</p>
+            <p class="text-sm">use by january 2024</p>
           </div>
-          <div
-            class="seat-section mt-4 grid grid-cols-6 justify-items-center gap-5"
-          >
-            <button
-              class="px-9 py-2 flex justify-center rounded-lg col-start-6 col-end-7 bg-[#0307121A]"
-            >
-              <img src="./images/wheel.png" alt="" srcset="" />
-            </button>
-            <!-- <p class="px-9 py-2">A</p>
-            <button
-              class="duration-200 ease-in-out hover:bg-slate-600 hover:text-white px-9 py-2 text-lg flex justify-center rounded-lg bg-[#0307121A]"
-            >
-              A1
-            </button>
-            <button
-              class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
-            >
-              A2
-            </button>
-            <p></p>
-            <button
-              class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
-            >
-              A3
-            </button>
-            <button
-              class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
-            >
-              A4
-            </button> -->
+          <img src="./images/cupon-devider.png" alt="" />
+          <div class="flex flex-col items-start justify-center pr-7">
+            <h1 class="text-3xl font-bold">NEW<sub>15</sub></h1>
+            <p class="text-sm font-bold">Coupon Code</p>
           </div>
         </div>
-        <div class="w-1/4">
-          <h1>Select your sheet</h1>
+        <div class="flex h-44 bg-[#F78C9C] rounded-xl">
+          <div class="flex flex-col items-start justify-center pl-7">
+            <h1 class="text-3xl font-bold">15% OFF</h1>
+            <p class="text-lg font-bold">on your next purchase</p>
+            <p class="text-sm">use by january 2024</p>
+          </div>
+          <img src="./images/cupon-devider.png" alt="" />
+          <div class="flex flex-col items-start justify-center pr-7">
+            <h1 class="text-3xl font-bold">NEW<sub>15</sub></h1>
+            <p class="text-sm font-bold">Coupon Code</p>
+          </div>
+        </div>
+      </section>
+      <button
+        class="mx-auto block m-8 rounded-xl font-bold text-[#1DD100] px-5 py-3 border-2 border-[#1DD100]"
+      >
+        See All Offers
+      </button>
+      <section
+        class="bg-[#F7F8F8] border-t-8 border-t-[#1DD100] rounded-t-[100px] mb-52 pb-16"
+      >
+        <h1 class="pt-12 text-center text-3xl mb-4 font-bold text-[#030712]">
+          P.H Paribahan
+        </h1>
+        <p class="max-w-[600px] text-center mx-auto mb-3 text-[#03071299]">
+          Yes, you can run unit tests and view the results directly within the
+          app. The integrated testing features allow for a streamlined .
+        </p>
+        <section
+          class="mt-16 mx-auto w-11/12 flex flex-col lg:flex-row gap-3 rounded-3xl items-center justify-center bg-white"
+        >
           <div>
-            <div class="font-bold flex justify-between items-center mt-4">
-              <p>
-                Seat
-                <sup
-                  class="total-seat-add bg-[#1DD100] p-[2px] rounded-lg text-white"
-                  >0</sup
-                >
-              </p>
-              <p>class</p>
-              <p>price</p>
+            <div class="flex justify-between mb-4 py-6 lg:py-0">
+              <div class="flex items-center justify-center gap-4">
+                <img class="w-14 hidden" src="./images/bus-logo.png" alt="" />
+                <div>
+                  <h2 class="text-lg font-bold">Greenline Paribahan</h2>
+                  <p>Coach-009-WEB ! AC_Business</p>
+                </div>
+              </div>
+              <div
+                class="flex flex-shrink-0 items-center bg-[#1DD10026] px-2 rounded-md text-[#1DD100]"
+              >
+                <img class="mr-2" src="./images/seat-green.png" alt="" />
+                <span class="total-seat-avalable mr-1 font-bold">40 </span>
+                Seats left
+              </div>
             </div>
-            <div class="seat-data"></div>
-            <!-- <div class="flex justify-between">
-              <p>seat no</p>
-              <p>Economoy</p>
-              <p>550</p>
-            </div> -->
+            <div class="bg-[#F7F8F8] p-5 rounded-xl">
+              <div class="border-b-2 border-dashed flex justify-between">
+                <p>Route</p>
+                <h2>Dhaka-Sylhet</h2>
+              </div>
+              <div class="border-b-2 border-dashed flex justify-between py-2">
+                <p>Departure Time</p>
+                <h2>9:00 PM</h2>
+              </div>
+              <div class="flex lg:flex-row flex-col justify-between gap-5 py-2">
+                <p class="bg-[#0307120D] p-3 rounded-lg">
+                  Boarding Point - Laxmipur
+                </p>
+                <p class="bg-[#0307120D] p-3 rounded-lg">
+                  Dropping Point - Bogura
+                </p>
+                <p class="bg-[#0307120D] p-3 rounded-lg">Est. Time - 11 Hour</p>
+              </div>
+            </div>
           </div>
-          <br />
-          <hr />
-          <div class="flex justify-between mt-3">
-            <p>Total Price</p>
-            <p>BDT <span class="total-price">****</span></p>
+          <img
+            class="lg:h-80 hidden lg:block"
+            src="./images/info-devider.png"
+            alt=""
+          />
+          <div class="flex flex-col py-6 lg:py-0 items-center justify-center">
+            <img src="./images/fare.png" alt="" />
+            <h1 class="text-2xl font-bold">550 Taka</h1>
+            <p class="text-sm">Per seat</p>
           </div>
-          <div class="cuppon h-9 flex justify-between bg-white rounded-xl mt-3">
-            <input
-              disabled
-              type="text"
-              placeholder="cuppon"
-              class="outline-none rounded-xl ml-3"
-            />
-            <button
-              disabled
-              class="cuppon-apply bg-[#1DD100] px-4 rounded-xl text-white"
+        </section>
+
+        <section
+          class="w-11/12 rounded-3xl p-8 mx-auto flex lg:flex-row flex-col items-start justify-evenly gap-4 mt-6 bg-white"
+        >
+          <div class="lg:w-[70%] w-full">
+            <h1 class="text-2xl font-bold mb-4">Select Your Seat</h1>
+            <div
+              class="flex justify-between items-center border-y-2 border-dashed py-4"
             >
-              Apply</button
-            ><br />
+              <p class="flex">
+                <img src="./images/seat-gray.png" alt="" /> Available
+              </p>
+              <p class="flex">
+                <img src="./images/seat-green-filled.png" alt="" />
+                Selected
+              </p>
+            </div>
+            <div
+              class="seat-section mt-4 grid grid-cols-6 justify-items-center lg:gap-6 gap-2"
+            >
+              <div
+                class="flex justify-center w-full rounded-lg col-start-6 col-end-7 bg-[#0307121A]"
+              >
+                <img
+                  class="scale-50"
+                  src="./images/wheel.png"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+              <!-- <p class="px-9 py-2">A</p>
+                <button
+                  class="duration-200 ease-in-out hover:bg-slate-600 hover:text-white px-9 py-2 text-lg flex justify-center rounded-lg bg-[#0307121A]"
+                >
+                  A1
+                </button>
+                <button
+                  class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
+                >
+                  A2
+                </button>
+                <p></p>
+                <button
+                  class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
+                >
+                  A3
+                </button>
+                <button
+                  class="px-9 py-2 duration-200 ease-in-out hover:bg-slate-600 hover:text-white text-lg flex justify-center rounded-lg bg-[#0307121A]"
+                >
+                  A4
+                </button> -->
+            </div>
           </div>
-          <div class="flex justify-between invisible">
-            <p>Discount</p>
-            <p>- <span class="discount">5</span></p>
+          <div class="lg:w-[25%] w-full">
+            <h1 class="text-2xl font-bold border-b-2 border-dashed pb-4">
+              Select your sheet
+            </h1>
+            <div class="bg-[#F7F8F8] px-4 rounded-xl">
+              <div class="">
+                <div
+                  class="py-4 font-bold flex justify-between items-center mt-4"
+                >
+                  <p>
+                    Seat
+                    <sup
+                      class="total-seat-add bg-[#1DD100] px-1 rounded-full text-white"
+                      >0</sup
+                    >
+                  </p>
+                  <p>class</p>
+                  <p>price</p>
+                </div>
+                <div class="seat-data"></div>
+                <h1 class="xxx text-xl font-bold text-center text-red-500">
+                  Not Selected Seat
+                </h1>
+                <!-- <div class="flex justify-between">
+                  <p>seat no</p>
+                  <p>Economoy</p>
+                  <p>550</p>
+                </div> -->
+              </div>
+              <br />
+              <hr />
+              <div class="flex justify-between mt-3 font-bold">
+                <p>Total Price</p>
+                <p>BDT <span class="total-price">****</span></p>
+              </div>
+              <div class="cuppon flex flex-col bg-white rounded-xl mt-3">
+                <input
+                  disabled
+                  type="text"
+                  placeholder="Cuppon"
+                  class="outline-none rounded-xl pl-3 py-2"
+                />
+                <button
+                  class="cuppon-apply bg-[#1DD100] rounded-b-lg py-[2px] text-white"
+                >
+                  Apply
+                </button>
+              </div>
+              <div class="flex justify-between invisible">
+                <p>Discount</p>
+                <p>- <span class="discount">5</span></p>
+              </div>
+              <div class="flex justify-between font-bold pb-4">
+                <p>Grand Total</p>
+                <p>BDT <span class="grand-total">****</span></p>
+              </div>
+            </div>
+            <div>
+              <h3 class="text-lg font-bold mt-4">Passenger Name*</h3>
+              <input
+                class="border-2 pl-4 rounded-lg py-1 w-full mt-1"
+                type="text"
+                placeholder="Enter your name"
+                required
+              />
+              <h3 class="text-lg font-bold mt-4">Phone number*</h3>
+              <input
+                class="phone-number border-2 pl-4 rounded-lg py-1 w-full mt-1"
+                type="number"
+                placeholder="Enter your name"
+                required
+              />
+
+              <h3 class="text-lg font-bold mt-4">Email id</h3>
+              <input
+                class="border-2 pl-4 rounded-lg py-1 w-full mt-1"
+                type="email"
+                placeholder="Enter your email id"
+              />
+              <button
+                class="purchase w-full bg-[#1DD100] text-white py-1 rounded-lg mt-4"
+                disabled
+              >
+                Puechase
+              </button>
+            </div>
           </div>
-          <div class="flex justify-between mt-4">
-            <p>Grand Total</p>
-            <p>BDT <span class="grand-total">****</span></p>
-          </div>
-        </div>
+        </section>
       </section>
     </main>
     <script src="script.js"></script>
