--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           app. The integrated testing features allow for a streamlined .
         </p>
         <a
-          href=""
+          href="#buy-ticket"
           class="block w-fit mx-auto px-5 py-3 rounded-lg mt-6 bg-[#1DD100] text-black font-bold"
         >
           <button>Buy Tickets</button>
@@ -196,6 +196,7 @@
         </section>
 
         <section
+          id="buy-ticket"
           class="w-11/12 rounded-3xl p-8 mx-auto flex lg:flex-row flex-col items-start justify-evenly gap-4 mt-6 bg-white"
         >
           <div class="lg:w-[70%] w-full">
